# claude-memory-mcp

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yml  install.sh  pyproject.toml
.claude/: launch.json
.claude-memory/: mandatory_rules.json  manifest.json
.claude/hooks/: auto-update-install.sh  inject-rules.sh  session-end.sh  session-start.sh
.github/workflows/: ci.yml  docker-publish.yml
frontend/: index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
frontend/src/: App.tsx  index.css  types.ts
frontend/src/components/: BulkAddRuleDialog.tsx  ConfirmDialog.tsx  EditProjectDialog.tsx  EditTemplateDialog.tsx  ImportDialog.tsx  ImportRulesDialog.tsx  ImportRulesPanel.tsx  LinkFolderDialog.tsx  MemoriesTab.tsx  MemoryCard.tsx  (+8 more)
packaging/homebrew/: README.md  claude-memory-mcp.rb
scripts/: release.sh
src/memory_mcp/: __init__.py  cli.py  config.py  container.py  context.py  daemon.py  enforcement.py  exceptions.py  folder_import.py  models.py  rules_cli.py  server.py  setup.py  sync_cli.py
tests/: conftest.py  test_core.py  test_migrations.py  test_portable.py
tests/repositories/: test_memory_repository.py  test_project_repository.py  test_provenance_repository.py  test_session_repository.py
tests/services/: test_claude_md_service.py  test_export_import_service.py  test_memory_service.py  test_model_service.py  test_portable_service.py  test_project_service.py  test_rules_service.py  test_search_service.py  test_session_service.py  test_sync_service.py  test_template_service.py  test_update_service.py
(+43 files in other folders)
