[project]
name = "memory-mcp"
version = "0.6.0"
description = "Production-grade vector memory MCP server with DuckDB + semantic search"
readme = "README.md"
license = { text = "MIT" }
authors = [{ name = "Achasoft" }]
requires-python = ">=3.11"
dependencies = [
    "fastmcp>=2.0",
    "duckdb>=1.1.0",
    "sentence-transformers>=3.0",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "uvicorn>=0.30",
    "starlette>=0.37",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
]

[project.urls]
Homepage = "https://github.com/navid-kianfar/claude-memory-mcp"
Repository = "https://github.com/navid-kianfar/claude-memory-mcp"
Issues = "https://github.com/navid-kianfar/claude-memory-mcp/issues"

[project.scripts]
memory-mcp = "memory_mcp.cli:main"
memory-mcp-serve = "memory_mcp.daemon:main"
memory-mcp-setup = "memory_mcp.setup:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/memory_mcp"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
